<resources>
    <string name="app_name">Avis</string>
    <string name="News">News</string>
    <string name="Meteo_del_sangue">Meteo del sangue</string>
    <string name="Vademecum">Vademecum del donatore</string>

    <color name="bianco">#FFFFFF</color>
    <color name="text_color">#123BA6</color>

    <dimen name="text_size">18dp</dimen>
    <string name="title_activity_news">News</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_weather">weather</string>
    <string name="title_activity_vade">vade</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_blood_weather">blood_weather</string>
    <string name="title_activity_where_we_are">where_we_are</string>
    <string name="title_activity_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="termini_di_utilizzo">Termini di utilizzo</string>
    <string name="privacy">Privacy</string>
    <string name="on">ON</string>
    <string name="notifiche">Notifiche</string>
    <string name="bacground_of_notification_on_of">bacground_of_notification_on_of</string>
    <string name="right_arrow">right_arrow</string>
    <string name="off">OFF</string>
    <string name="settings">Impostazioni</string>


</resources>