<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homesolocuore"
    android:id="@+id/drawer_layout"
    tools:context=".Settings">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start">
    <include layout="@layout/toolbar_activity" />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom">
    <include layout="@layout/toolbar_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/settings_container">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:onClick="Notification"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sfarro_bold"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/notifiche"
                android:textColor="#123BA6"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/notification_on_of_background"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/bacground_of_notification_on_of"
                android:padding="10dp"
                android:src="@drawable/notification_on" />

            <TextView
                android:id="@+id/notification_on_of_text"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/sfarro_bold"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/on"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="Privacy"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sfarro_bold"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/privacy"
                android:textColor="#123BA6"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/right_arrow"
                android:padding="10dp"
                android:src="@drawable/settings_right_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center"
            android:onClick="terms_of_condition"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sfarro_bold"
                android:gravity="center"
                android:text="@string/termini_di_utilizzo"
                android:textAlignment="center"
                android:textColor="#123BA6"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/right_arrow"
                android:padding="10dp"
                android:src="@drawable/settings_right_arrow" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:fontFamily="@font/sfarro_bold"
            android:gravity="center"
            android:onClick="logoutFromSettings"
            android:text="@string/log_out"
            android:textAlignment="center"
            android:textColor="#123BA6"
            android:textSize="22sp" />
    </LinearLayout>

</RelativeLayout>