<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:id="@+id/drawer_layout"
    tools:context=".HomePage">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/News"
            android:layout_width="229dp"
            android:layout_height="91dp"
            android:layout_marginTop="263dp"
            android:backgroundTint="@color/bianco"

            android:drawableEnd="@drawable/news"
            android:fontFamily="@font/sfarro_bold"
            android:text="@string/News"
            android:textColor="@color/text_color"
            android:onClick="News"

            android:textSize="@dimen/text_size"
            app:cornerRadius="22dp"
            app:layout_constraintBottom_toTopOf="@+id/Meteo_sangue"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Meteo_sangue"
            android:layout_width="229dp"
            android:layout_height="91dp"
            android:backgroundTint="@color/bianco"
            android:onClick="blood_weather"
            android:drawableEnd="@drawable/blood_weather_main"

            android:fontFamily="@font/sfarro_bold"
            android:text="@string/Meteo_del_sangue"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            app:cornerRadius="22dp"

            app:layout_constraintBottom_toTopOf="@+id/Vademecum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/News" />

        <Button
            android:id="@+id/Vademecum"
            android:layout_width="229dp"
            android:layout_height="91dp"

            android:layout_marginBottom="200dp"
            android:backgroundTint="@color/bianco"
            android:drawableEnd="@drawable/vademecum"
            android:fontFamily="@font/sfarro_bold"
            android:onClick="Vademecum"
            android:text="@string/Vademecum"
            android:textColor="@color/text_color"

            android:textSize="@dimen/text_size"
            app:cornerRadius="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Meteo_sangue" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="start">
        <include layout="@layout/toolbar_up" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <include layout="@layout/toolbar_down" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#F9FBFF">
        <include layout="@layout/main_nav_drawer" />
    </RelativeLayout>



</androidx.drawerlayout.widget.DrawerLayout>
